syntax = "proto3";

option go_package = "github.com/kmlcnclk/kc-oms/common/api";

package api;

message Product {
  string id = 1;
  string name = 2;
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  repeated Product products = 1;
}

service ProductService {
  rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
}
